fixed up some styling, not responsive but will change once in bricks

--- a/src/App.css
+++ b/src/App.css
@@ -513,6 +513,24 @@ h3 {
   background-color: #402278;
 }
 
+.game-info-display {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 0% 10%;
+}
+
+.game-display-video {
+  width: 100%;
+  height: 260px;
+  margin-bottom: 5%;
+}
+
+.games-button-container {
+  display: flex;
+  width: 60%;
+}
+
 .games-select-right {
   flex-basis: 58%;
   padding: 40px;
